maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: value avance is not a member of Unit
gauche();avance();avance();avance();droite()avance();prendBiscuit()
                                            ^